bug fixes, perf optimizations, and features for Vostok config module